--- a/Exercises/02 - Data viz and data from the web/Data from the Web.ipynb
+++ b/Exercises/02 - Data viz and data from the web/Data from the Web.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -92,9 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Response status code: 503\n",
+      "\n",
+      "Response headers: {'Server': 'awselb/2.0', 'Date': 'Thu, 25 Sep 2025 14:42:27 GMT', 'Content-Type': 'text/html', 'Content-Length': '162', 'Connection': 'keep-alive'}\n",
+      "\n",
+      "Response body: <html>\n",
+      "<head><title>503 Service Temporarily Unavailable</title></head>\n",
+      "<body>\n",
+      "<center><h1>503 Service Temporarily Unavailable</h1></center>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Make the request\n",
     "r = requests.get('https://httpbin.org/ip') # /ip: Returns the requester's IP Address.\n",
@@ -470,7 +488,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ada",
    "language": "python",
    "name": "python3"
   },
@@ -484,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.13.7"
   },
   "varInspector": {
    "cols": {
